--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 </head>
+
 <body>
-    <h1>Welcome</h1>
+    <header>
+        <nav class="navbar navbar-expand-sm bg-light">
+            <div class="container">
+                <span class="navbar-brand mb-0 h1" href="#">BOTCHA Inc</span>
+                <a class="navbar-brand" href="#"><i class="fas fa-home"></i></a>
+            </div>
+        </nav>
+    </header>
+    <div class="menu" id="menu">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.uol.com.br">UOL</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.globo.com">Globo</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+    <div class="content" id="content">
+        What is Lorem Ipsum?
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
+        a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
+        remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
+        Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions
+        of Lorem Ipsum.
+    </div>
+
+    <footer id="footer" class="footer text-center">
+        &copy; 2024 Turma de Microservices
+    </footer>
 </body>
+
 </html>
