--- a/src/main/resources/templates/cargo/list.html
+++ b/src/main/resources/templates/cargo/list.html
@@ -5,34 +5,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cargos</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-        <h1>Listagem de Cargos</h1>
 
-        <button class="btn btn-primary btn-sm">Novo</button>
+    <div th:replace="layout/header :: headerFragment"></div>
+    <div th:replace="layout/menu :: menuFragment"></div>
+
+    <div class="content" id="content">
+    <div class="container">
+        <h3>Listagem de Cargos</h3>
+
+        <a href="cargos/form" class="btn-sm btn-primary"><i class="fas fa-plus"></i></a>
 
         <table class="table table-hover table-sm">
             <thead>
                 <tr>
                     <th>Id</th>
                     <th>Cargo</th>
-                    <th>Departamento</th>                
+                    <th>Departamento</th> 
+                    <th>Ações</th>              
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td>1</td>
                     <td>Desenvolvedor</td>
+                    <td></td>
+                    <td>
+                        <a class="btn-sm btn-primary" href="/funcionarios/update"><i class="fas fa-plus"></i></a>
+                        <a class="btn-sm btn-danger" href="/funcionarios/delete"><i class="	fas fa-minus"></i></a>
+                    </td>
                 </tr>
                 <tr>
                     <td>2</td>
                     <td>Scrum Master</td>
+                    <td></td>
+                    <td>
+                        <a class="btn-sm btn-primary" href="/funcionarios/update"><i class="fas fa-plus"></i></a>
+                        <a class="btn-sm btn-danger" href="/funcionarios/delete"><i class="	fas fa-minus"></i></a>
+                    </td>
                 </tr>
                 <tr>
                     <td>3</td>
                     <td>DBA</td>
+                    <td></td>
+                    <td>
+                        <a class="btn-sm btn-primary" href="/funcionarios/update"><i class="fas fa-plus"></i></a>
+                        <a class="btn-sm btn-danger" href="/funcionarios/delete"><i class="	fas fa-minus"></i></a>
+                    </td>
                 </tr>
             </tbody>
 
@@ -40,5 +62,7 @@
         </table>
         
     </div>
+</div>
+<div th:replace="layout/footer :: footerFragment"></div>
 </body>
 </html>
