--- a/src/main/resources/templates/departamento/list.html
+++ b/src/main/resources/templates/departamento/list.html
@@ -5,37 +5,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Departamentos</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-        <h1>Listagem de Departamentos</h1>
+    <div th:replace="layout/header :: headerFragment"></div>
+    <div th:replace="layout/menu :: menuFragment"></div>
 
-        <button class="btn btn-primary btn-sm">Novo</button>
+    <div class="content" id="content">
+    <div class="container">
+        <h3>Listagem de Departamentos</h3>
+
+        <a href="departamentos/form" class="btn-sm btn-primary"><i class="fas fa-plus"></i></a>
 
         <table class="table table-hover table-sm">
             <thead>
                 <tr>
                     <th>Id</th>
-                    <th>Departamento</th>                
+                    <th>Departamento</th>
+                    <th>Ações</th>                
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td>1</td>
                     <td>Recursos Humanos</td>
+                    <td>
+                        <a class="btn-sm btn-primary" href="/funcionarios/update"><i class="fas fa-plus"></i></a>
+                        <a class="btn-sm btn-danger" href="/funcionarios/delete"><i class="	fas fa-minus"></i></a>
+                    </td>
                 </tr>
                 <tr>
                     <td>2</td>
                     <td>Financeiro</td>
+                    <td>
+                        <a class="btn-sm btn-primary" href="/funcionarios/update"><i class="fas fa-plus"></i></a>
+                        <a class="btn-sm btn-danger" href="/funcionarios/delete"><i class="	fas fa-minus"></i></a>
+                    </td>
                 </tr>
                 <tr>
                     <td>3</td>
                     <td>Vendas</td>
+                    <td>
+                        <a class="btn-sm btn-primary" href="/funcionarios/update"><i class="fas fa-plus"></i></a>
+                        <a class="btn-sm btn-danger" href="/funcionarios/delete"><i class="	fas fa-minus"></i></a>
+                    </td>
                 </tr>
                 <tr>
                     <td>4</td>
                     <td>Faturamento</td>
+                    <td>
+                        <a class="btn-sm btn-primary" href="/funcionarios/update"><i class="fas fa-plus"></i></a>
+                        <a class="btn-sm btn-danger" href="/funcionarios/delete"><i class="	fas fa-minus"></i></a>
+                    </td>
                 </tr>
             </tbody>
 
@@ -43,5 +65,7 @@
         </table>
         
     </div>
+</div>
+<div th:replace="layout/footer :: footerFragment"></div>
 </body>
 </html>
