--- a/src/main/resources/templates/funcionario/form.html
+++ b/src/main/resources/templates/funcionario/form.html
@@ -1,34 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Funcionarios</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Funcionarios</title>
+<link rel="stylesheet"
+	href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+<link rel="stylesheet" href="css/style.css">
+<link
+	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+	rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-        <h1>Cadastro de Funcionarios</h1>
+	<div th:replace="layout/header :: headerFragment"></div>
+	<div th:replace="layout/menu :: menuFragment"></div>
+
+	<div id="content">
+
+	<div class="container">
+		<h1>Cadastro de Funcionarios</h1>
 		<!-- antes do /funcionarios/save voce pega o nome da aplicação, se não tiver nome usa-se o localhost -->
 		<!-- th:object pega o funcionario do save da controller -->
-        <form th:action="@{/funcionarios/save}" th:object="${funcionario}" method="post">
-            <div class="input-group mb-3">
+		<form th:action="@{/funcionarios/save}" th:object="${funcionario}"
+			method="post">
+			<div class="input-group mb-3">
 
-                <div class="input-group-prepend">
-                    <div class="input-group-text">Id</div>
-                </div>
-                <!-- *{} atributos de um objeto | readonly - atributo apenas para leitura -->
-                <input type="text" class="form-control" id="id" th:field="*{id}" readonly>
-            </div>
-            <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                    <div class="input-group-text">Nome</div>
-                </div>
-                <input type="text" class="form-control" id="nome" th:field="*{nome}">
-            </div>
+				<div class="input-group-prepend">
+					<div class="input-group-text">Id</div>
+				</div>
+				<!-- *{} atributos de um objeto | readonly - atributo apenas para leitura -->
+				<input type="text" class="form-control" id="id" th:field="*{id}"
+					readonly>
+			</div>
+			<div class="input-group mb-3">
+				<div class="input-group-prepend">
+					<div class="input-group-text">Nome</div>
+				</div>
+				<input type="text" class="form-control" id="nome" th:field="*{nome}">
+			</div>
 
-<!--
+			<!--
             //id de cada input deve seguir o mesmo de cada classe referenciada
             <div class="input-group mb-3">
                 <div class="input-group-prepend">
@@ -103,10 +114,11 @@
                   <option value="MG">Minas Gerais</option>
                 </select>        
 -->
-            <button type="submit" class="btn btn-primary btn-sm">Confirmar</button>
-            <a th:href="@{/funcionarios}" class="btn btn-secondary btn-sm">Cancelar</a>
-        </form>
-        
-    </div>
+			<button type="submit" class="btn btn-primary btn-sm">Confirmar</button>
+			<a th:href="@{/funcionarios}" class="btn btn-secondary btn-sm">Cancelar</a>
+		</form>
+
+	</div>
+	</div>
 </body>
 </html>
