--- a/src/main/resources/templates/cargo/form.html
+++ b/src/main/resources/templates/cargo/form.html
@@ -1,45 +1,62 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cargos</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Cargos</title>
+<link rel="stylesheet"
+	href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+<link rel="stylesheet" href="css/style.css">
+<link
+	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+	rel="stylesheet">
 </head>
 
 <body>
-    <div class="container">
-        <h1>Cadastro de Cargos</h1>
 
-        <form>
-            <div class="input-group mb-3">
+	<div th:replace="layout/header :: headerFragment"></div>
+	<div th:replace="layout/menu :: menuFragment"></div>
 
-                <div class="input-group-prepend">
-                    <div class="input-group-text">Id</div>
-                </div>
-                <input type="text" class="form-control" id="id">
-            </div>
-            <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                    <div class="input-group-text">Nome</div>
-                </div>
-                <input type="text" class="form-control" id="nome">
-            </div>
+	<div id="content">
 
-            <label label for="id_departamento">Departamentos</label>
-            <select class="form-control" id="id_departamento">
-                <option value="10">RH</option>
-                <option value="11">Financeiro</option>
-                <option value="12">Vendas</option>
-            </select>
+		<div class="container">
+			<h3>Cadastro de Cargos</h3>
 
-            <button class="btn btn-primary btn-sm">Confirmar</button>
-            <button class="btn btn-sm">Cancelar</button>
-        </form>
+			<form th:action="@{/cargos/save}" th:object="${cargo}"
+				method="post">
+				<div class="input-group mb-3">
 
-    </div>
+					<div class="input-group-prepend">
+						<div class="input-group-text">Id</div>
+					</div>
+					<input type="text" class="form-control" id="id" th:field="*{id}"
+						readonly>
+				</div>
+				<div class="input-group mb-3">
+					<div class="input-group-prepend">
+						<div class="input-group-text">Nome</div>
+					</div>
+					<input type="text" class="form-control" id="nome"
+						th:field="*{nome}">
+				</div>
+
+				
+				<label label for="id_departamento">Departamentos</label> <select
+					class="form-control" id="id_departamento">
+					<option th>RH</option>
+					<option value="11">Financeiro</option>
+					<option value="12">Vendas</option>
+				</select>
+				 
+
+				<button type="submit" class="btn btn-primary btn-sm">Confirmar</button>
+				<a th:href="@{/cargos}" class="btn btn-secondary btn-sm">Cancelar</a>
+			</form>
+
+		</div>
+	</div>
 </body>
 
 </html>
