--- a/src/main/resources/templates/departamento/list_cargo.html
+++ b/src/main/resources/templates/departamento/list_cargo.html
@@ -1,46 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Departamentos</title>
+    <title>Listagem de Cargos por Departamento</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
-
 <body>
-    <div class="container">
-        <h1>Listagem de Cargos por Departamentos</h1>
+<div class="container">
+    <h1>Listagem de Cargos por Departamento</h1>
 
-        <label label for="id_departamento">Departamentos</label>
-        <select class="form-control" id="id_departamento">
-            <option value="10">RH</option>
-            <option value="11">Financeiro</option>
-            <option value="12">Vendas</option>
-        </select>
+    <label for="id_departamento">Departamento</label>
+    <select class="form-control" id="id_departamento">
+        <option value="10">RH</option>
+        <option value="11">Financeiro</option>
+        <option value="12">Vendas</option>
+    </select>
 
-        <br>
+    <br>
 
-        <table class="table table-hover table-sm">
-            <thead>
-                <tr>
-                    <th>Id</th>
-                    <th>Cargo</th>
-                    <th>Departamento</th>                
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>Desenvolvedor</td>
-                    <td>RH</td>
-                </tr>
-            </tbody>
+    <table class="table table-hover table-sm">
+        <thead>
+        <tr>
+            <th>Id</th>
+            <th>Cargo</th>
+            <th>Departamento</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>1</td>
+            <td>Devenvolvedor</td>
+            <td>RH</td>
+        </tr>
+        </tbody>
 
-        </table>
 
-    </div>
+    </table>
+
+</div>
 </body>
-
 </html>
