--- a/src/main/resources/templates/funcionario/form.html
+++ b/src/main/resources/templates/funcionario/form.html
@@ -1,37 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Funcionarios</title>
-<link rel="stylesheet"
-	href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-<link rel="stylesheet" href="css/style.css">
-<link
-	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-	rel="stylesheet">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Funcionarios</title>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/style.css">
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-	<div th:replace="layout/header :: headerFragment"></div>
-	<div th:replace="layout/menu :: menuFragment"></div>
+<div th:replace="layout/header :: headerFragment"></div>
+<div th:replace="layout/menu :: menuFragment"></div>
 
-	<div id="content">
+<div id="content">
 
 	<div class="container">
 		<h3>Cadastro de Funcionarios</h3>
-		<!-- antes do /funcionarios/save voce pega o nome da aplicação, se não tiver nome usa-se o localhost -->
-		<!-- th:object pega o funcionario do save da controller -->
-		<form th:action="@{/funcionarios/save}" th:object="${funcionario}"
-			method="post">
+
+		<form th:action="@{/funcionarios/save}" th:object="${funcionario}" method="post">
 			<div class="input-group mb-3">
 
 				<div class="input-group-prepend">
 					<div class="input-group-text">Id</div>
 				</div>
-				<!-- *{} atributos de um objeto | readonly - atributo apenas para leitura -->
-				<input type="text" class="form-control" id="id" th:field="*{id}"
-					readonly>
+				<input type="text" class="form-control" id="id" th:field="*{id}" readonly>
 			</div>
+
 			<div class="input-group mb-3">
 				<div class="input-group-prepend">
 					<div class="input-group-text">Nome</div>
@@ -39,86 +33,97 @@
 				<input type="text" class="form-control" id="nome" th:field="*{nome}">
 			</div>
 
+
+			<div class="input-group mb-3">
+				<div class="input-group-prepend">
+					<div class="input-group-text">Data de Entrada</div>
+				</div>
+				<input type="text" class="form-control" id="dataEntrada" th:field="*{dataEntrada}">
+			</div>
+
+			<div class="input-group mb-3">
+				<div class="input-group-prepend">
+					<div class="input-group-text">Data de Saída</div>
+				</div>
+				<input type="text" class="form-control" id="dataSaida" th:field="*{dataSaida}">
+			</div>
+
+			<div class="input-group mb-3">
+				<div class="input-group-prepend">
+					<div class="input-group-text">Salário</div>
+				</div>
+				<input type="text" class="form-control" id="salario" th:field="*{salario}">
+			</div>
+
+			<div class="input-group mb-3">
+				<div class="input-group-prepend">
+					<div class="input-group-text">Cargo</div>
+				</div>
+				<select class="form-control" id="id_cargo" th:field="*{idCargo}">
+					<option value="">--Selecione--</option>
+					<option th:each="lov : ${lovCargos}"
+							th:value="${lov.value}"
+							th:text="${lov.text}">
+					</option>
+				</select>
+			</div>
+
 			<!--
-            //id de cada input deve seguir o mesmo de cada classe referenciada
-            <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                    <div class="input-group-text">Data de Entrada</div>
-                </div>
-                <input type="date" class="form-control" id="dataEntrada">
-            </div>
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                                <div class="input-group-text">CEP</div>
+                            </div>
+                            <input type="text" class="form-control" id="cep">
+                        </div>
 
-            <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                    <div class="input-group-text">Data de Saída</div>
-                </div>
-                <input type="date" class="form-control" id="dataSaida">
-            </div>
-            
-            //quando for um valor numérico, deixe como um texto e faça uma validação do valor e da formatação
-            //da para fazer a validação tanto no back quanto no front
-            <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                    <div class="input-group-text">Salário</div>
-                </div>
-                <input type="text" class="form-control" id="salario">
-            </div>
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                                <div class="input-group-text">Logradouro</div>
+                            </div>
+                            <input type="text" class="form-control" id="logradouro">
+                        </div>
 
-                <label for="id_cargo">Cargos</label>
-                <select class="form-control" id="id_cargo">
-                  <option value="1">Desenvolvedor</option>
-                  <option value="2">Scrum Master</option>
-                  <option value="3">DBA</option>
-                </select>
-                
-                <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                        <div class="input-group-text">CEP</div>
-                    </div>
-                    <input type="text" class="form-control" id="cep">
-                </div>
-                <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                        <div class="input-group-text">Logradouro</div>
-                    </div>
-                    <input type="text" class="form-control" id="logradouro">
-                </div>
-                <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                        <div class="input-group-text">Número</div>
-                    </div>
-                    <input type="text" class="form-control" id="numero">
-                </div>
-                <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                        <div class="input-group-text">Complemento</div>
-                    </div>
-                    <input type="text" class="form-control" id="complemento">
-                </div>
-                <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                        <div class="input-group-text">Bairro</div>
-                    </div>
-                    <input type="text" class="form-control" id="bairro">
-                </div>
-                <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                        <div class="input-group-text">Cidade</div>
-                    </div>
-                    <input type="text" class="form-control" id="cidade">
-                </div>
-                <label for="uf">UF</label>
-                <select class="form-control" id="uf">
-                  <option value="SP">São Paulo</option>
-                  <option value="RJ">Rio de Janeiro</option>
-                  <option value="MG">Minas Gerais</option>
-                </select>        
--->
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                                <div class="input-group-text">Número</div>
+                            </div>
+                            <input type="text" class="form-control" id="numero">
+                        </div>
+
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                                <div class="input-group-text">Complemento</div>
+                            </div>
+                            <input type="text" class="form-control" id="complemento">
+                        </div>
+
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                                <div class="input-group-text">Bairro</div>
+                            </div>
+                            <input type="text" class="form-control" id="bairro">
+                        </div>
+
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                                <div class="input-group-text">Cidade</div>
+                            </div>
+                            <input type="text" class="form-control" id="cidade">
+                        </div>
+
+                        <label for="uf">UF</label>
+                        <select class="form-control" id="uf">
+                            <option value="SP">São Paulo</option>
+                            <option value="RJ">Rio de Janeiro</option>
+                        </select>
+             -->
 			<button type="submit" class="btn btn-primary btn-sm">Confirmar</button>
 			<a th:href="@{/funcionarios}" class="btn btn-secondary btn-sm">Cancelar</a>
 		</form>
 
 	</div>
-	</div>
+</div>
+
+<div th:replace="layout/footer :: footerFragment"></div>
 </body>
 </html>
