--- a/src/main/resources/templates/funcionario/list.html
+++ b/src/main/resources/templates/funcionario/list.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,46 +8,43 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 </head>
-
 <body>
-    <div th:replace="layout/header :: headerFragment"></div>
-    <div th:replace="layout/menu :: menuFragment"></div>
+<div th:replace="layout/header :: headerFragment"></div>
+<div th:replace="layout/menu :: menuFragment"></div>
 
-    <div class="content" id="content">
-        <div class="container">
-            <h3>Listagem de Funcionarios</h3>
+<div id="content">
 
-            <a href="funcionarios/add" class="btn-sm btn-primary"><i class="fas fa-plus"></i></a>
+    <div class="container">
+        <h3>Listagem de Funcionarios</h3>
 
-            <table class="table table-hover table-sm">
-                <thead>
-                    <tr>
-                        <th>Id</th>
-                        <th>Nome</th>
-                        <th>Salário</th>
-                        <th>Cidade/UF</th>
-                        <th>Ações</th>
-                    </tr>
-                </thead>
-                <tbody>
-                	<tr th:each="funcionario : ${funcionarios}">
-                        <td th:text="${funcionario.id}"></td>
-                        <td th:text="${funcionario.nome}"></td>
-                       	<td></td>
-                       	<td></td>
-                       	<td>
-                       		<a class="btn-sm btn-primary" th:href="@{/funcionarios/update/{id}(id=${funcionario.id})}"><i class="fas fa-edit"></i></a>
-                            <a class="btn-sm btn-danger" th:href="@{/funcionarios/delete/{id}(id=${funcionario.id})}"><i class="	fas fa-minus"></i></a>
-                       	</td>
-                    </tr>
-                </tbody>
+        <a href="funcionarios/add" class="btn-sm btn-primary"><i class="fas fa-plus"></i></a>
 
-
-            </table>
-        </div>
-
+        <table class="table table-hover table-sm">
+            <thead>
+            <tr>
+                <th>Id</th>
+                <th>Nome</th>
+                <th>Salário</th>
+                <th>Cidade/UF</th>
+                <th>Ações</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="funcionario : ${funcionarios}">
+                <td th:text="${funcionario.id}"></td>
+                <td th:text="${funcionario.nome}"></td>
+                <td th:text="${#numbers.formatCurrency(funcionario.salario)}"></td>
+                <td></td>
+                <td>
+                    <a class="btn-sm btn-primary" th:href="@{/funcionarios/update/{id}(id=${funcionario.id})}"><i class="fas fa-edit"></i></a>
+                    <a class="btn-sm btn-danger" th:href="@{/funcionarios/delete/{id}(id=${funcionario.id})}"><i class="fas fa-minus"></i></a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
     </div>
-    <div th:replace="layout/footer :: footerFragment"></div>
-</body>
+</div>
 
+<div th:replace="layout/footer :: footerFragment"></div>
+</body>
 </html>
